--- a/Assignments/HW1/HW-1.ipynb
+++ b/Assignments/HW1/HW-1.ipynb
@@ -15,7 +15,7 @@
     "**INSTRUCTIONS:** You are a quality control analyst for a craft brewery experimenting with a new India Pale Ale (IPA). One key quality attribute of IPA is its bitterness, measured in International Bitterness Units (IBUs). The brewery wants to determine if the aging time (3, 4, or 5 weeks) affects the IBUs of the beer. To test this, the brewing team brews a single batch of the experimental IPA and divides it into aging tanks, with each tank randomly assigned to be aged for 3, 4, or 5 weeks. After aging, the IBUs of ten randomly selected bottles from each aging time are measured using a spectrophotometer. The data are in the file `IPA.xlsx`. With these data, I want you to:\n",
     "\n",
     "**Question 1.** Briefly define the objective of this experiment\n",
-    "\n",
+    "\n", Test
     "**Question 2.** Specify the outcome variable\n",
     "\n",
     "**Question 3.** Specify the independent variable. What are some possible lurking variables?\n",
